# codebee-bots

./: .gitignore  CMakeLists.txt  README.md  attack_bot.cpp  balanced_bot.cpp  exampleReplay.cb  expanding-bot.js  expanding_bot.cpp  expanding_bot.py  expanding_bot_old.cpp  game_linux  harvester-bot.js  harvester-bot2.js  harvester_bot.cpp  harvester_bot.py  harvester_bot2.cpp  harvester_bot2.py  potent_bot.cpp  random-bot.js  random_bot.cpp  random_bot.py  smart-bot.js  smart_bot.cpp  smart_bot_old.cpp
helper-package/: action.h  bee.h  bot.cpp  bot.h  cell.cpp  cell.h  constants.h  face.h  flower.h  insect.h  map.cpp  map.h  move.h  position.h  queen_bee.h
helper-package-js/: action.js  bee.js  bot.js  cell.js  constants.js  insect.js  map.js  position.js  queen-bee.js  std-in-reader.js
helper_package_python/: action.py  bee.py  bot.py  cell.py  constants.py  insect.py  map.py  position.py  queen_bee.py
